# stapifaction

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  vocs.config.ts
docs/components/: files.tsx
docs/pages/: index.mdx
docs/pages/learn/: index.mdx  persist-collections.mdx
docs/snippets/: basic.rs  collection.rs
docs/snippets/collections/: basic.rs  id.rs
stapifaction/: Cargo.toml  README.md
stapifaction/examples/: basic.rs  collection.rs  collection_items.rs  fields.rs  path_style_with_attributes.rs
stapifaction/src/: expand_strategy.rs  json.rs  lib.rs  path_element.rs  path_resolve_strategy.rs  path_style.rs  persist.rs  persistable.rs  resolvable_path.rs
stapifaction/src/persister/: json.rs  mod.rs
stapifaction/tests/: basic.rs  collection.rs  main.rs  subset.rs
stapifaction/tests/common/: mock_persister.rs
stapifaction/tests/derive/: basic.rs  collection.rs  mod.rs  subset.rs
stapifaction_derive/: Cargo.toml
stapifaction_derive/src/: lib.rs  persist_input_receiver.rs  persistable_input_receiver.rs
stapifaction_derive/tests/: collection.rs
stapifaction_derive/tests/common/: mod.rs
