[package]
name = "stapifaction"
version = "0.0.1"
edition = "2021"
authors = ["leruaa"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/stapifaction/stapifaction"
repository = "https://github.com/stapifaction/stapifaction"

[dependencies]
stapifaction_derive = { optional = true, path = "../stapifaction_derive" }
serde = { version = "1.0" }
serde_json = { version = "1.0", optional = true }
erased-serde = "0.4"
eyre = "0.6"

[features]
default = ["derive"]

derive = ["stapifaction_derive"]
json = ["serde_json"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
