[package]
name = "stapifaction"
version = "0.0.2"
edition = "2021"
description = "Library allowing to easily generate static APIs."
keywords = ["serde", "api"]
categories = ["data-structures", "filesystem"]
authors = ["leruaa"]
license = "MIT"
homepage = "https://github.com/stapifaction/stapifaction"
repository = "https://github.com/stapifaction/stapifaction"

[dependencies]
stapifaction_derive = { version = "0.0.2", optional = true, path = "../stapifaction_derive" }
serde = { version = "1.0" }
serde_json = { version = "1.0", optional = true }
erased-serde = "0.4"
eyre = "0.6"

[features]
default = ["derive"]

derive = ["dep:stapifaction_derive"]
json = ["dep:serde_json"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
