[package]
name = "stapifaction_derive"
version = "0.1.0"
edition = "2021"
description = "Macros implementation of #[derive(Persistable)]."
keywords = ["serde", "api"]
categories = ["data-structures", "filesystem"]
authors = ["leruaa"]
license = "MIT"
homepage = "https://github.com/stapifaction/stapifaction"
repository = "https://github.com/stapifaction/stapifaction"

[lib]
name = "stapifaction_derive"
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
darling = "0.20"
serde_derive_internals = "0.29"
convert_case = "0.6"
itertools = "0.12"
